# wechat-article-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: fetcher.py
src/wechat_article_parser/: __init__.py  models.py  parser.py
tests/: conftest.py  test_parser.py
