[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wechat-article-parser"
version = "0.0.3"
description = "WeChat MP article parser - extract metadata and content from WeChat public account articles"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_article_parser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
